--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <br>
       <iframe src="https://giphy.com/embed/Hf6ixJLZT9QrXbJDi1" width="240" height="240" frameBorder="0" class="giphy-embed"></iframe>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/CAyWN9ba9J8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+         <div class="sketchfab-embed-wrapper"> <iframe title="My Cube - AK" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="fullscreen; autoplay; vr" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/8d40adc546a042b987a99844216fc870/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/my-cube-ak-8d40adc546a042b987a99844216fc870?utm_medium=embed&utm_campaign=share-popup&utm_content=8d40adc546a042b987a99844216fc870" target="_blank" style="font-weight: bold; color: #1CAAD9;"> My Cube - AK </a> by <a href="https://sketchfab.com/aytaktak7?utm_medium=embed&utm_campaign=share-popup&utm_content=8d40adc546a042b987a99844216fc870" target="_blank" style="font-weight: bold; color: #1CAAD9;"> aytack </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=8d40adc546a042b987a99844216fc870" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div>
       <html>
           <head>
               <style>
