--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
       <br>
       
       <video width="560" height="315" controls>
-         <source src="3dbasketballgirl.mp4" type="video/mp4">
+         <source src="3dbasketballgirl.MP4" type="video/mp4">
          </video>
       
-      <img src="3dbasketgirl.jpg" width="936" height="1353">
+      <img src="3dbasket.jpg" width="936" height="1353">
       <html>
           <head>
               <style>
