--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
          <source src="3dbasketballgirl.MP4" type="video/mp4">
          </video>
       
-      <img src="3dbasket.jpg" width="936" height="1353">
+      <img src="3dbasket.jpeg" width="936" height="1353">
       <html>
           <head>
               <style>
