--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                   <br>
                  <br>
                  <p>Homework-5</p>
-                 <div class="sketchfab-embed-wrapper"> <iframe title="Deodorant" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="fullscreen; autoplay; vr" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="740" height="560" src="https://sketchfab.com/models/0643ccd8944045a39d319de5a927b7b6/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/deodorant-0643ccd8944045a39d319de5a927b7b6?utm_medium=embed&utm_campaign=share-popup&utm_content=0643ccd8944045a39d319de5a927b7b6" target="_blank" style="font-weight: bold; color: #1CAAD9;"> Deodorant </a> by <a href="https://sketchfab.com/aytaktak7?utm_medium=embed&utm_campaign=share-popup&utm_content=0643ccd8944045a39d319de5a927b7b6" target="_blank" style="font-weight: bold; color: #1CAAD9;"> aytack </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=0643ccd8944045a39d319de5a927b7b6" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div>
-
+                <model-viewer src="d3odaorant.glb" alt="A 3D model of deodorant" ar ar-modes="webxr scene-viewer quick-look" environment-image="neutral" auto-rotate camera-controls></model-viewer>
+               <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
       <html>
           <head>
               <style>
