--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
          <source src="3dbasketballgirl.MP4" type="video/mp4">
          </video>
       
-      <img src="3dbasket.jpeg" width="450" height="600">
+      <img src="3dbasket.webp" width="450" height="600">
       
                   <br>
                  <br>
