--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
 .viewerComponent  {
 }
 </style>
+   <style>
+.p1 {
+  font-family: "Times New Roman", Times, serif;
+}
+
+.p2 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.p3 {
+  font-family: "Lucida Console", "Courier New", monospace;
+}
+</style>
 </head>
 
 <body>
@@ -130,6 +143,10 @@
         Ea debitis quos minima consequuntur aperiam eum consequatur vitae, laudantium eveniet, sit necessitatibus sequi vel exercitationem deleniti omnis quisquam, perspiciatis distinctio architecto.</p>
     
     <br>
+      <h1>Different Fonts</h1>
+<p class="p1">This is a paragraph, shown in the Times New Roman font.</p>
+<p class="p2">This is a paragraph, shown in the Arial font.</p>
+<p class="p3">This is a paragraph, shown in the Lucida Console font.</p>
     <br>
 
     <img src="https://thumbs.dreamstime.com/b/erasmus-en-mapa-de-la-uni%C3%B3n-europea-con-el-formado-puntos-europa-144749471.jpg" alt="Erasmus" width="380" height="280">
